# home-work

./: .gitignore
CourseProject 2/: CourseProject 2.cpp  CourseProject 2.sln  CourseProject 2.vcxproj  CourseProject 2.vcxproj.filters
CourseProject 2/Transport_vehicles/: Transport_vehicles.sln  Transport_vehicles.vcxproj
Lesson 1/Project 1.1/: Project.sln
Lesson 10/Task 10.2/: CMakeLists.txt  EquilTriangle.h  Figure_CMake.cpp  IsosTriangle.h  Parallelogram.cpp  Quadrilateral.cpp  Quadrilateral.h  RectTriangle.h  Rectangle.cpp  Square.h  Task 6.3.sln  Task 6.3.vcxproj
Lesson 10/my_first_cmake_project/: CMakeLists.txt  my_first_cmake_project.cpp
Lesson 11/DynamicLIB/: DynamicLIB.sln  DynamicLIB.vcxproj  Leaver.cpp
Lesson 11/StaticLIB/: Greeter.cpp  Greeter.h  StaticLIB.sln  StaticLIB.vcxproj
Lesson 11/Task 11.1/: Task 11.1.cpp  Task 11.1.vcxproj
Lesson 11/Task 11.2/: Task 11.2.cpp  Task 11.2.vcxproj
Lesson 11/Task 11.3/: CMakeLists.txt  DynamicLIBinCMake.cpp  Leaver.cpp  Leaver.h
Lesson 2/Project 2.1/: Project 2.1.cpp  Project 2.1.sln  Project 2.1.vcxproj  Project 2.1.vcxproj.filters
Lesson 2/Project 2.2/: Project 2.2.cpp  Project 2.2.sln  Project 2.2.vcxproj  Project 2.2.vcxproj.filters
Lesson 2/Project 2.3/: Project 2.3.cpp  Project 2.3.sln  Project 2.3.vcxproj  Project 2.3.vcxproj.filters
Lesson 3/Task 3.1/: Task 3.1.cpp  Task 3.1.sln  Task 3.1.vcxproj
Lesson 3/Task 3.2/: Task 3.2.cpp  Task 3.2.sln  Task 3.2.vcxproj
Lesson 4/Task 4.1/: Task 4.1.cpp  Task 4.1.sln  Task 4.1.vcxproj
Lesson 4/Task 4.2/: Task 4.2.cpp  Task 4.2.sln  (+1 more)
(+88 files in other folders)
