
cmake_minimum_required(VERSION 3.22.0)

project(Figures)

add_executable(Figures_CMake Figure_CMake.cpp 

Figure.cpp Figure.h 
Triangle.cpp Triangle.h 
RectTriangle.cpp RectTriangle.h 
IsosTriangle.cpp IsosTriangle.h 
EquilTriangle.cpp EquilTriangle.h 
Quadrilateral.cpp Quadrilateral.h 
Parallelogram.cpp Parallelogram.h  
Rectangle.cpp Rectangle.h 
Square.cpp Square.h 
Rhomb.cpp Rhomb.h)